--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tsstart": "ts-node index.ts",
+    "tsstart": "ts-node index.js",
     "start": "babel-node index.js"
   },
   "repository": {
